# OpenMutt

./: README  README.md
champ/: .gitmodules  .travis.yml
champ/champ_base/include/: actuator.h
champ/champ_bringup/launch/: bringup.launch.py  openmutt_bringup.launch.py
champ/champ_config/launch/: gazebo.launch.py
champ/champ_description/: CMakeLists.txt  package.xml
champ/champ_description/environment/: gz_sim_resource_path.dsv
champ/champ_description/launch/: description.launch.py
champ/champ_description/urdf/: accessories.urdf.xacro  asus_camera.urdf.xacro  champ.urdf  champ.urdf.xacro  gen_urdf  hokuyo_utm30lx.urdf.xacro  leg.urdf.xacro  properties.urdf.xacro
champ/champ_gazebo/: CMakeLists.txt  package.xml
champ/champ_gazebo/launch/: gazebo.launch.py  spawn_robot.launch  spawn_world.launch
champ/champ_gazebo/scripts/: imu_sensor.py  odometry.py  odometry_tf.py
champ/champ_gazebo/src/: contact_sensor.cpp
champ/champ_msgs/: CMakeLists.txt  package.xml
champ/champ_navigation/: CMakeLists.txt  package.xml
champ_teleop/: champ_teleop.py
champ_teleop/launch/: teleop.launch.py
openmutt_config/: CMakeLists.txt
openmutt_config/config/gait/: gait.yaml
openmutt_config/config/joints/: joints.yaml
openmutt_config/config/links/: links.yaml
openmutt_config/launch/: bringup.launch.py
openmutt_description/: CMakeLists.txt  package.xml
openmutt_description/launch/: description.launch.py
openmutt_description/meshes/: 25-2525-751_6-CL-1.stl  Body_Bearing-2.stl  Body_Electrical-Leg-Tray-1.stl  Body_Leg-Center-2.stl  Body_Mid-BatteryCover-1.stl  Body_Mid-EletricalPlate-1.stl  Body_Mid-TopCover-Side-2.stl  Cycloidal_Simplified_for_FEA-v1-1.stl  Hip_Main-Short-1-2.stl  Leg_Knee-Cable-Top-Plate-V3.2-1.stl  Leg_Knee-Cable-Top-V3.2-2-1.stl  Leg_Knee-Cable-V3.2-2-1.stl  Leg_Knee-Cartilage-Outer-1-2.stl  Leg_Shank-Bushing-2.stl  Leg_Thigh-2.stl  Leg_Thigh-Plate-1-2.stl  Master_TubeSuport-1.stl  SD_Body_Leg-Bearing-2.stl  SD_Body_Leg-Motor-2.stl  SD_Body_Mid-Brace-2.stl  SD_Body_Mid-ELECTRICAL-BulkHead-1.stl  SD_Body_Mid-TopPlate-Center-1.stl  SD_Hip_motor_mount-2.stl  SD_TPU_Foot-1.stl  SD_foot-1-1-2.stl  SD_ideler-1.stl  SD_shank-main-V2-1-1.stl  Sd_Body_Mid-Sideplate-2.stl  base_link.stl
openmutt_description/urdf/: MASTER.urdf  openMuttSensors.urdf
