<package format="3">
  <name>champ_description</name>
  <version>0.1.0</version>
  <description>CHAMP Description Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>ros_gz_sim</build_depend> <!-- Ignition Gazebo simulation package -->

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend> <!-- Ignition Gazebo simulation package -->
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
