<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>champ_navigation</name>
  <version>0.1.0</version>
  <description>CHAMP Navigation Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://linorobot.org</url>
  <url type="repository">https://github.com/linorobot/linorobot2</url>
  <url type="bugtracker">https://github.com/linorobot/linorobot2/issues</url>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>slam_toolbox</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
